--- a/HiChongSwift/Find.storyboard
+++ b/HiChongSwift/Find.storyboard
@@ -503,7 +503,7 @@ So as I pray, Unlimited Blade Works.</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FindCircleAddTextCellIdentifier" rowHeight="149" id="1ob-UL-Pcy" customClass="FindCircleAddTextCell" customModule="HiChongSwift" customModuleProvider="target">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="FindCircleAddTextCellIdentifier" rowHeight="149" id="1ob-UL-Pcy" customClass="FindCircleAddTextCell" customModule="HiChongSwift" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1ob-UL-Pcy" id="Tjf-yh-P97">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -530,7 +530,7 @@ So as I pray, Unlimited Blade Works.</string>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FindAddImageCellIdentifier" rowHeight="86" id="Yvq-Ir-Emw" customClass="FindAddImageCell" customModule="HiChongSwift" customModuleProvider="target">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="FindAddImageCellIdentifier" rowHeight="86" id="Yvq-Ir-Emw" customClass="FindAddImageCell" customModule="HiChongSwift" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Yvq-Ir-Emw" id="0yn-Vq-nVd">
