--- a/HiChongSwift/Login.storyboard
+++ b/HiChongSwift/Login.storyboard
@@ -53,6 +53,9 @@
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="5Kl-Ph-Xdw" id="HoW-VM-Hgn"/>
+                                                    </connections>
                                                 </textField>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
